--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -74,7 +74,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Drawable.h" />
+    <ClInclude Include=".\Canvas.h" />
     <ClInclude Include="Primitive.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="stdafx.h" />
