--- a/Utils/Utils.vcxproj
+++ b/Utils/Utils.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Exception.cpp" />
+    <ClCompile Include="File.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -25,6 +26,7 @@ attrib +r$(SolutionDir)$(Configuration)\shared.pch</Command>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Exception.h" />
+    <ClInclude Include="File.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SymHandler.h" />
     <ClInclude Include="Types.h" />
